Bug fixed - TourList just work for specific agency, Fix UI issue
- Remove ag-grid horizontal scroll

--- a/src/app/@theme/styles/global/components/_ag-grid.theme.scss
+++ b/src/app/@theme/styles/global/components/_ag-grid.theme.scss
@@ -43,5 +43,8 @@ $grid-size: 4px;
       width: 100%;
       text-align: center;
     }
+    .ag-body-viewport{
+      overflow-x: hidden;//prevent to horizontal scrolling cos we don't need it
+    }
   }
 }
